--- a/html/index.html
+++ b/html/index.html
@@ -47,6 +47,7 @@
             </a>
         </div>
     </header>
+    <div class="banner"></div>
     <footer>
         <div class="container">
             <nav>
