--- a/html/index.html
+++ b/html/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,11 +9,14 @@
     <link rel="stylesheet" href="../css/index.css">
     <script src="https://use.fontawesome.com/533f4a82f0.js"></script>
 </head>
+
 <body>
     <header>
         <div class="logo">
             <a href="../index.html">
-                <h1><img src="../images/logo_white.png" alt="尋喵啟事"></h1>
+                <h1>
+                    <img src="../images/logo_white.png" alt="尋喵啟事">
+                </h1>
             </a>
         </div>
         <nav>
@@ -47,7 +51,27 @@
             </a>
         </div>
     </header>
-    <div class="banner"></div>
+    <div class="banner">
+        <div class="container">
+            <div class="find">
+                <img src="../images/number0.png" alt="0">
+                <img src="../images/number8.png" alt="8">
+                <img src="../images/number7.png" alt="7"> 隻喵喵已經找到牠的主人
+            </div>
+            <div class="wait">
+                <img src="../images/number7.png" alt="7">
+                <img src="../images/number7.png" alt="7">
+                <img src="../images/number7.png" alt="7"> 隻喵喵還在等待牠的主人
+            </div>
+            <div class="search">
+                <input type="text" placeholder="搜尋中途之家 or 心儀喵喵">
+                <a href="#"><i class="fa fa-search fa-2x" aria-hidden="true"></i></a>
+            </div>
+        </div>
+    </div>
+    <div class="shop">
+        
+    </div>
     <footer>
         <div class="container">
             <nav>
@@ -89,4 +113,5 @@
         </div>
     </footer>
 </body>
+
 </html>
