--- a/html/index.html
+++ b/html/index.html
@@ -15,7 +15,7 @@
         <div class="logo">
             <a href="../index.html">
                 <h1>
-                    <img src="../images/logo_white.png" alt="尋喵啟事">
+                    <img src="../images/logo_white.png" alt="尋喵啟事" title="回首頁">
                 </h1>
             </a>
         </div>
@@ -65,12 +65,39 @@
             </div>
             <div class="search">
                 <input type="text" placeholder="搜尋中途之家 or 心儀喵喵">
-                <a href="#"><i class="fa fa-search fa-2x" aria-hidden="true"></i></a>
+                <a href="#">
+                    <i class="fa fa-search fa-2x" title="跳轉至搜尋結果" aria-hidden="true"></i>
+                </a>
             </div>
         </div>
     </div>
     <div class="shop">
-        
+        <div class="container">
+            <div class="shop-left">
+                <img src="../images/貓貓_171225_0003.jpg" alt="product">
+                <img src="../images/貓貓_171225_0003.jpg" alt="product">
+                <img src="../images/貓貓_171225_0003.jpg" alt="product">
+                <img src="../images/貓貓_171225_0003.jpg" alt="product">
+                <img src="../images/貓貓_171225_0003.jpg" alt="product">
+                <img src="../images/貓貓_171225_0003.jpg" alt="product">
+                <img src="../images/貓貓_171225_0003.jpg" alt="product">
+                <img src="../images/貓貓_171225_0003.jpg" alt="product">
+            </div>
+            <div class="shop-title">
+                <h2>商城</h2>
+                <h3>Shopping Store</h3>
+            </div>
+            <div class="shop-right">
+                <img src="../images/貓貓_171225_0003.jpg" alt="product">
+                <img src="../images/貓貓_171225_0003.jpg" alt="product">
+                <img src="../images/貓貓_171225_0003.jpg" alt="product">
+                <img src="../images/貓貓_171225_0003.jpg" alt="product">
+                <img src="../images/貓貓_171225_0003.jpg" alt="product">
+                <img src="../images/貓貓_171225_0003.jpg" alt="product">
+                <img src="../images/貓貓_171225_0003.jpg" alt="product">
+                <img src="../images/貓貓_171225_0003.jpg" alt="product">
+            </div>
+        </div>
     </div>
     <footer>
         <div class="container">
