--- a/html/member.html
+++ b/html/member.html
@@ -14,7 +14,7 @@
     <header>
         <div class="logo">
             <a href="../index.html">
-                <h1><img src="../images/logo_white.png" alt="尋喵啟事"></h1>
+                <h1><img src="../images/logo_white.png" alt="尋喵啟事" title="回首頁"></h1>
             </a>
         </div>
         <nav>
