--- a/html/index.html
+++ b/html/index.html
@@ -86,6 +86,12 @@
             <div class="shop-title">
                 <h2>商城</h2>
                 <h3>Shopping Store</h3>
+                <ul class="prod-list">
+                    <li><a href="#">喵喵肚子餓</a></li>
+                    <li><a href="#">喵喵待在家</a></li>
+                    <li><a href="#">精選喵草</a></li>
+                    <li><a href="#">喵喵愛玩耍</a></li>
+                </ul>
             </div>
             <div class="shop-right">
                 <img src="../images/貓貓_171225_0003.jpg" alt="product">
