--- a/html/index.html
+++ b/html/index.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+    <!-- header -->
     <header>
         <div class="logo">
             <a href="../index.html">
@@ -51,6 +52,7 @@
             </a>
         </div>
     </header>
+    <!-- banner -->
     <div class="banner">
         <div class="container">
             <div class="find">
@@ -71,6 +73,42 @@
             </div>
         </div>
     </div>
+    <!-- 尋喵 -->
+    <div class="pick-kit">
+        <ul>
+            <a href="#">
+                <li>
+                    <span class="bubble">
+                        <span class="kit-name">薛薛</span>
+                        <span class="kit-age">兩個月</span>
+                        <span class="kit-address">台中市</span>
+                        <span class="kit-home">CACA中途之家</span>
+                    </span>
+                </li>
+            </a>
+            <a href="#">
+                <li>
+                    <span class="bubble">
+                        <span class="kit-name">書書</span>
+                        <span class="kit-age">三個月</span>
+                        <span class="kit-address">台南市</span>
+                        <span class="kit-home">喃喃中途之家</span>
+                    </span>
+                </li>
+            </a>
+            <a href="#">
+                <li>
+                    <span class="bubble">
+                        <span class="kit-name">泡泡</span>
+                        <span class="kit-age">五個月</span>
+                        <span class="kit-address">台北市</span>
+                        <span class="kit-home">閩閩中途之家</span>
+                    </span>
+                </li>
+            </a>
+        </ul>
+    </div>
+    <!-- 商城 -->
     <div class="shop">
         <div class="container">
             <div class="shop-left">
@@ -87,10 +125,18 @@
                 <h2>商城</h2>
                 <h3>Shopping Store</h3>
                 <ul class="prod-list">
-                    <li><a href="#">喵喵肚子餓</a></li>
-                    <li><a href="#">喵喵待在家</a></li>
-                    <li><a href="#">精選喵草</a></li>
-                    <li><a href="#">喵喵愛玩耍</a></li>
+                    <li>
+                        <a href="#">喵喵肚子餓</a>
+                    </li>
+                    <li>
+                        <a href="#">喵喵待在家</a>
+                    </li>
+                    <li>
+                        <a href="#">精選喵草</a>
+                    </li>
+                    <li>
+                        <a href="#">喵喵愛玩耍</a>
+                    </li>
                 </ul>
             </div>
             <div class="shop-right">
@@ -105,6 +151,7 @@
             </div>
         </div>
     </div>
+    <!-- footer -->
     <footer>
         <div class="container">
             <nav>
