--- a/html/index.html
+++ b/html/index.html
@@ -75,6 +75,20 @@
     </div>
     <!-- 尋喵 -->
     <div class="pick-kit">
+        <div class="pick-title">
+            <h2>尋喵</h2>
+            <h3>Pick Up My Kittens</h3>
+        </div>
+        <div class="left-arrow arrow">
+            <a href="#">
+                <img src="../images/cat-print-white.png" alt="cat paws">
+            </a>
+        </div>
+        <div class="right-arrow arrow">
+            <a href="#">
+                <img src="../images/cat-print-white.png" alt="cat paws">
+            </a>
+        </div>
         <ul>
             <a href="#">
                 <li>
