--- a/html/index.html
+++ b/html/index.html
@@ -126,14 +126,14 @@
     <div class="shop">
         <div class="container">
             <div class="shop-left">
-                <img src="../images/貓貓_171225_0003.jpg" alt="product">
-                <img src="../images/貓貓_171225_0003.jpg" alt="product">
-                <img src="../images/貓貓_171225_0003.jpg" alt="product">
-                <img src="../images/貓貓_171225_0003.jpg" alt="product">
-                <img src="../images/貓貓_171225_0003.jpg" alt="product">
-                <img src="../images/貓貓_171225_0003.jpg" alt="product">
-                <img src="../images/貓貓_171225_0003.jpg" alt="product">
-                <img src="../images/貓貓_171225_0003.jpg" alt="product">
+                <img src="../images/storeProduct_1.jpg" alt="product">
+                <img src="../images/storeProduct_2.jpg" alt="product">
+                <img src="../images/storeProduct_1.jpg" alt="product">
+                <img src="../images/storeProduct_2.jpg" alt="product">
+                <img src="../images/storeProduct_1.jpg" alt="product">
+                <img src="../images/storeProduct_2.jpg" alt="product">
+                <img src="../images/storeProduct_1.jpg" alt="product">
+                <img src="../images/storeProduct_2.jpg" alt="product">
             </div>
             <div class="shop-title">
                 <h2>商城</h2>
@@ -154,14 +154,14 @@
                 </ul>
             </div>
             <div class="shop-right">
-                <img src="../images/貓貓_171225_0003.jpg" alt="product">
-                <img src="../images/貓貓_171225_0003.jpg" alt="product">
-                <img src="../images/貓貓_171225_0003.jpg" alt="product">
-                <img src="../images/貓貓_171225_0003.jpg" alt="product">
-                <img src="../images/貓貓_171225_0003.jpg" alt="product">
-                <img src="../images/貓貓_171225_0003.jpg" alt="product">
-                <img src="../images/貓貓_171225_0003.jpg" alt="product">
-                <img src="../images/貓貓_171225_0003.jpg" alt="product">
+                <img src="../images/storeProduct_1.jpg" alt="product">
+                <img src="../images/storeProduct_2.jpg" alt="product">
+                <img src="../images/storeProduct_1.jpg" alt="product">
+                <img src="../images/storeProduct_2.jpg" alt="product">
+                <img src="../images/storeProduct_1.jpg" alt="product">
+                <img src="../images/storeProduct_2.jpg" alt="product">
+                <img src="../images/storeProduct_1.jpg" alt="product">
+                <img src="../images/storeProduct_2.jpg" alt="product">
             </div>
         </div>
     </div>
