--- a/html/index.html
+++ b/html/index.html
@@ -122,90 +122,115 @@
             </a>
         </ul>
     </div>
-    <!-- 商城 -->
-    <div class="shop">
-        <div class="container">
-            <div class="shop-left">
-                <img src="../images/storeProduct_1.jpg" alt="product">
-                <img src="../images/storeProduct_2.jpg" alt="product">
-                <img src="../images/storeProduct_1.jpg" alt="product">
-                <img src="../images/storeProduct_2.jpg" alt="product">
-                <img src="../images/storeProduct_1.jpg" alt="product">
-                <img src="../images/storeProduct_2.jpg" alt="product">
-                <img src="../images/storeProduct_1.jpg" alt="product">
-                <img src="../images/storeProduct_2.jpg" alt="product">
-            </div>
-            <div class="shop-title">
-                <h2>商城</h2>
-                <h3>Shopping Store</h3>
-                <ul class="prod-list">
-                    <li>
-                        <a href="#">喵喵肚子餓</a>
-                    </li>
-                    <li>
-                        <a href="#">喵喵待在家</a>
-                    </li>
-                    <li>
-                        <a href="#">精選喵草</a>
-                    </li>
-                    <li>
-                        <a href="#">喵喵愛玩耍</a>
-                    </li>
-                </ul>
-            </div>
-            <div class="shop-right">
-                <img src="../images/storeProduct_1.jpg" alt="product">
-                <img src="../images/storeProduct_2.jpg" alt="product">
-                <img src="../images/storeProduct_1.jpg" alt="product">
-                <img src="../images/storeProduct_2.jpg" alt="product">
-                <img src="../images/storeProduct_1.jpg" alt="product">
-                <img src="../images/storeProduct_2.jpg" alt="product">
-                <img src="../images/storeProduct_1.jpg" alt="product">
-                <img src="../images/storeProduct_2.jpg" alt="product">
-            </div>
+    <!-- 中途之家 -->
+    <div class="shelter">
+        <div class="shelter-title">
+            <h2>中途之家</h2>
+            <h3>Animal Shelter</h3>
         </div>
-    </div>
-    <!-- footer -->
-    <footer>
-        <div class="container">
-            <nav>
-                <ul>
-                    <li>
-                        <a href="#">尋喵</a>
-                    </li>
-                    <li>
-                        <a href="##1">中途之家</a>
-                    </li>
-                    <li>
-                        <a href="#">商城</a>
-                    </li>
-                    <li>
-                        <a href="#">討論區</a>
-                    </li>
-                    <li>
-                        <a href="#">會員專區</a>
-                    </li>
-                </ul>
-            </nav>
-            <div class="follow">
-                <div class="btns">
-                    <span>follow us on</span>
-                    <a href="#" class="btn facebook">
-                        <i class="fa fa-facebook"></i>
-                    </a>
-                    <a href="#" class="btn youtube">
-                        <i class="fa fa-youtube"></i>
-                    </a>
-                    <a href="#" class="btn twitter">
-                        <i class="fa fa-twitter"></i>
-                    </a>
-                    <a href="#" class="btn google">
-                        <i class="fa fa-google"></i>
-                    </a>
+        <div class="shelter-home">
+            <div class="figure">
+                <div class="homeContext">
+                    <span class="shelter-name">貓貓別哭 中途咖啡廳</span>
+                    <span class="shelter-address">台北市信義區信義路四段88號</span>
+                    <span class="shelter-tel">02-2777-6666</span>
+                    <span class="shelter-time">營業時間 : 10:00~20:00</span>
+                </div>
+            </div>
+            <div class="figure">
+                <div class="homeContext">
+                    <span class="shelter-name">貓貓別哭 中途咖啡廳</span>
+                    <span class="shelter-address">台北市信義區信義路四段88號</span>
+                    <span class="shelter-tel">02-2777-6666</span>
+                    <span class="shelter-time">營業時間 : 10:00~20:00</span>
                 </div>
             </div>
         </div>
-    </footer>
+    </div>
+        <!-- 商城 -->
+        <div class="shop">
+            <div class="container">
+                <div class="shop-left">
+                    <img src="../images/storeProduct_1.jpg" alt="product">
+                    <img src="../images/storeProduct_2.jpg" alt="product">
+                    <img src="../images/storeProduct_1.jpg" alt="product">
+                    <img src="../images/storeProduct_2.jpg" alt="product">
+                    <img src="../images/storeProduct_1.jpg" alt="product">
+                    <img src="../images/storeProduct_2.jpg" alt="product">
+                    <img src="../images/storeProduct_1.jpg" alt="product">
+                    <img src="../images/storeProduct_2.jpg" alt="product">
+                </div>
+                <div class="shop-title">
+                    <h2>商城</h2>
+                    <h3>Shopping Store</h3>
+                    <ul class="prod-list">
+                        <li>
+                            <a href="#">喵喵肚子餓</a>
+                        </li>
+                        <li>
+                            <a href="#">喵喵待在家</a>
+                        </li>
+                        <li>
+                            <a href="#">精選喵草</a>
+                        </li>
+                        <li>
+                            <a href="#">喵喵愛玩耍</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="shop-right">
+                    <img src="../images/storeProduct_1.jpg" alt="product">
+                    <img src="../images/storeProduct_2.jpg" alt="product">
+                    <img src="../images/storeProduct_1.jpg" alt="product">
+                    <img src="../images/storeProduct_2.jpg" alt="product">
+                    <img src="../images/storeProduct_1.jpg" alt="product">
+                    <img src="../images/storeProduct_2.jpg" alt="product">
+                    <img src="../images/storeProduct_1.jpg" alt="product">
+                    <img src="../images/storeProduct_2.jpg" alt="product">
+                </div>
+            </div>
+        </div>
+        <!-- footer -->
+        <footer>
+            <div class="container">
+                <nav>
+                    <ul>
+                        <li>
+                            <a href="#">尋喵</a>
+                        </li>
+                        <li>
+                            <a href="##1">中途之家</a>
+                        </li>
+                        <li>
+                            <a href="#">商城</a>
+                        </li>
+                        <li>
+                            <a href="#">討論區</a>
+                        </li>
+                        <li>
+                            <a href="#">會員專區</a>
+                        </li>
+                    </ul>
+                </nav>
+                <div class="follow">
+                    <div class="btns">
+                        <span>follow us on</span>
+                        <a href="#" class="btn facebook">
+                            <i class="fa fa-facebook"></i>
+                        </a>
+                        <a href="#" class="btn youtube">
+                            <i class="fa fa-youtube"></i>
+                        </a>
+                        <a href="#" class="btn twitter">
+                            <i class="fa fa-twitter"></i>
+                        </a>
+                        <a href="#" class="btn google">
+                            <i class="fa fa-google"></i>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </footer>
 </body>
 
 </html>
