--- a/html/halfway_house_detail.html
+++ b/html/halfway_house_detail.html
@@ -11,11 +11,50 @@
 </head>
 
 <body>
-    <div class="left"></div>
+    <header>
+        <div class="logo">
+            <a href="../index.html">
+                <h1>
+                    <img src="../images/logo_white.png" alt="尋喵啟事" title="回首頁">
+                </h1>
+            </a>
+        </div>
+        <nav>
+            <ul>
+                <li>
+                    <a href="#">尋喵</a>
+                </li>
+                <li>
+                    <a href="##1">中途之家</a>
+                </li>
+                <li>
+                    <a href="#">商城</a>
+                </li>
+                <li>
+                    <a href="#">討論區</a>
+                </li>
+                <li>
+                    <a href="#">會員專區</a>
+                </li>
+            </ul>
+        </nav>
+        <div class="icons">
+            <a href="#">
+                <i class="fa fa-shopping-cart fa-2x" aria-hidden="true"></i>
+            </a>
+            <a href="#">
+                <i class="fa fa-user-circle-o fa-2x" aria-hidden="true"></i>
+            </a>
+            <a href="#">
+                <i class="fa fa-heart-o fa-2x" aria-hidden="true"></i>
+                <span id="like">6</span>
+            </a>
+        </div>
+    </header>
     <div class="right">
         <div class="banner">
             <div class="text">
-                第一家
+                希望館
             </div>
         </div>
         <div class="intro">
@@ -47,56 +86,61 @@
             <img src="../images/flycat1.png" alt="" class="flycat">
             <img src="../images/flycat2.png" alt="" class="flycat">
             <img src="../images/flycat3.png" alt="" class="flycat">
-            <div class="catup">
-                <div class="container">
-                    <div class="twocat">
-                        <img src="../images/catcat_171225_0001.jpg" alt="">
-                        <div class="text">
-                            <h3>喵喵喵</h3>
-                            生日:1993/13/13
-                            <br> 性別:男生
-                            <br>
-                        </div>
+            <div class="container">
+                <div class="threecat">
+                    <img src="../images/catcat_171225_0003.jpg" alt="">
+                    <div class="text">
+                        <h3>喵喵喵</h3>
+                        生日:1993/13/13
+                        <br> 性別:男生
+                        <br>
                     </div>
-                    <div class="twocat">
-                        <img src="../images/catcat_171225_0002.jpg" alt="">
-                        <div class="text">
-                            <h3>喵喵喵</h3>
-                            生日:1990/08/30
-                            <br> 性別:男生
-                            <br>
-                        </div>
+                </div>
+                <div class="threecat">
+                    <img src="../images/catcat_171225_0004.jpg" alt="">
+                    <div class="text">
+                        <h3>喵喵喵</h3>
+                        生日:1993/13/13
+                        <br> 性別:男生
+                        <br>
+                    </div>
+                </div>
+                <div class="threecat">
+                    <img src="../images/catcat_171225_0007.jpg" alt="">
+                    <div class="text">
+                        <h3>喵喵喵</h3>
+                        生日:1993/13/13
+                        <br> 性別:男生
+                        <br>
                     </div>
                 </div>
             </div>
-            <div class="catdown">
-                <div class="container">
-                    <div class="threecat">
-                        <img src="../images/catcat_171225_0003.jpg" alt="">
-                        <div class="text">
-                            <h3>喵喵喵</h3>
-                            生日:1993/13/13
-                            <br> 性別:男生
-                            <br>
-                        </div>
+            <div class="container">
+                <div class="threecat">
+                    <img src="../images/catcat_171225_0003.jpg" alt="">
+                    <div class="text">
+                        <h3>喵喵喵</h3>
+                        生日:1993/13/13
+                        <br> 性別:男生
+                        <br>
                     </div>
-                    <div class="threecat">
-                        <img src="../images/catcat_171225_0004.jpg" alt="">
-                        <div class="text">
-                            <h3>喵喵喵</h3>
-                            生日:1993/13/13
-                            <br> 性別:男生
-                            <br>
-                        </div>
+                </div>
+                <div class="threecat">
+                    <img src="../images/catcat_171225_0004.jpg" alt="">
+                    <div class="text">
+                        <h3>喵喵喵</h3>
+                        生日:1993/13/13
+                        <br> 性別:男生
+                        <br>
                     </div>
-                    <div class="threecat">
-                        <img src="../images/catcat_171225_0007.jpg" alt="">
-                        <div class="text">
-                            <h3>喵喵喵</h3>
-                            生日:1993/13/13
-                            <br> 性別:男生
-                            <br>
-                        </div>
+                </div>
+                <div class="threecat">
+                    <img src="../images/catcat_171225_0007.jpg" alt="">
+                    <div class="text">
+                        <h3>喵喵喵</h3>
+                        生日:1993/13/13
+                        <br> 性別:男生
+                        <br>
                     </div>
                 </div>
             </div>
@@ -111,28 +155,72 @@
             <div class="container">
                 <h2>最新文章</h2>
                 <div class="article">
-                    <p>Here is some content.
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil accusantium dolor aut delectus, incidunt ab culpa laboriosam doloribus impedit ullam ut facere repudiandae officia illo unde maiores eius dolorem fuga.
+                    <p>Here is some content. Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil accusantium dolor
+                        aut delectus, incidunt ab culpa laboriosam doloribus impedit ullam ut facere repudiandae officia
+                        illo unde maiores eius dolorem fuga.
                     </p>
                 </div>
                 <div class="article">
-                    <p>Here is some content.
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil accusantium dolor aut delectus, incidunt ab culpa laboriosam doloribus impedit ullam ut facere repudiandae officia illo unde maiores eius dolorem fuga.
+                    <p>Here is some content. Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil accusantium dolor
+                        aut delectus, incidunt ab culpa laboriosam doloribus impedit ullam ut facere repudiandae officia
+                        illo unde maiores eius dolorem fuga.
                     </p>
                 </div>
                 <div class="article">
-                    <p>Here is some content.
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil accusantium dolor aut delectus, incidunt ab culpa laboriosam doloribus impedit ullam ut facere repudiandae officia illo unde maiores eius dolorem fuga.
+                    <p>Here is some content. Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil accusantium dolor
+                        aut delectus, incidunt ab culpa laboriosam doloribus impedit ullam ut facere repudiandae officia
+                        illo unde maiores eius dolorem fuga.
                     </p>
                 </div>
                 <div class="article">
-                    <p>Here is some content.
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil accusantium dolor aut delectus, incidunt ab culpa laboriosam doloribus impedit ullam ut facere repudiandae officia illo unde maiores eius dolorem fuga.
+                    <p>Here is some content. Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil accusantium dolor
+                        aut delectus, incidunt ab culpa laboriosam doloribus impedit ullam ut facere repudiandae officia
+                        illo unde maiores eius dolorem fuga.
                     </p>
                 </div>
             </div>
         </div>
     </div>
+    <footer>
+        <div class="container">
+            <nav>
+                <ul>
+                    <li>
+                        <a href="#">尋喵</a>
+                    </li>
+                    <li>
+                        <a href="##1">中途之家</a>
+                    </li>
+                    <li>
+                        <a href="#">商城</a>
+                    </li>
+                    <li>
+                        <a href="#">討論區</a>
+                    </li>
+                    <li>
+                        <a href="#">會員專區</a>
+                    </li>
+                </ul>
+            </nav>
+            <div class="follow">
+                <div class="btns">
+                    <span>follow us on</span>
+                    <a href="#" class="btn facebook">
+                        <i class="fa fa-facebook"></i>
+                    </a>
+                    <a href="#" class="btn youtube">
+                        <i class="fa fa-youtube"></i>
+                    </a>
+                    <a href="#" class="btn twitter">
+                        <i class="fa fa-twitter"></i>
+                    </a>
+                    <a href="#" class="btn google">
+                        <i class="fa fa-google"></i>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
