--- a/html/halfway_house_search.html
+++ b/html/halfway_house_search.html
@@ -5,9 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <script src="https://code.jquery.com/jquery-2.2.4.min.js" 
-            integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
-            crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
+        crossorigin="anonymous">
     </script>
     <script src="https://use.fontawesome.com/533f4a82f0.js"></script>
     <link rel="stylesheet" href="../css/halfway_house_search.css">
@@ -15,7 +14,46 @@
 </head>
 
 <body>
-    <div class="left"></div>
+    <header>
+        <div class="logo">
+            <a href="../index.html">
+                <h1>
+                    <img src="../images/logo_white.png" alt="尋喵啟事" title="回首頁">
+                </h1>
+            </a>
+        </div>
+        <nav>
+            <ul>
+                <li>
+                    <a href="#">尋喵</a>
+                </li>
+                <li>
+                    <a href="##1">中途之家</a>
+                </li>
+                <li>
+                    <a href="#">商城</a>
+                </li>
+                <li>
+                    <a href="#">討論區</a>
+                </li>
+                <li>
+                    <a href="#">會員專區</a>
+                </li>
+            </ul>
+        </nav>
+        <div class="icons">
+            <a href="#">
+                <i class="fa fa-shopping-cart fa-2x" aria-hidden="true"></i>
+            </a>
+            <a href="#">
+                <i class="fa fa-user-circle-o fa-2x" aria-hidden="true"></i>
+            </a>
+            <a href="#">
+                <i class="fa fa-heart-o fa-2x" aria-hidden="true"></i>
+                <span id="like">6</span>
+            </a>
+        </div>
+    </header>
     <div class="right">
         <div class="back"></div>
         <h2>中途之家</h2>
@@ -75,7 +113,7 @@
                 <br> TIME：12:00～21:00（周一公休）
             </div>
             <div class="pic">
-                <img src="../images/33056773491_55f7a3e1e1_o.jpg" alt="">
+                <img src="../images/33184672765_a14d959f8b_o.jpg" alt="">
             </div>
             <div class="bg bg1"></div>
         </div>
@@ -87,7 +125,7 @@
                 <br> TIME：12:00～21:00（周一公休）
             </div>
             <div class="pic">
-                <img src="../images/33184665385_f00176040f_o.jpg" alt="">
+                <img src="../images/33184672765_a14d959f8b_o.jpg" alt="">
             </div>
             <div class="bg bg2"></div>
         </div>
@@ -104,6 +142,46 @@
             <div class="bg bg3"></div>
         </div>
     </div>
+    <footer>
+        <div class="container">
+            <nav>
+                <ul>
+                    <li>
+                        <a href="#">尋喵</a>
+                    </li>
+                    <li>
+                        <a href="##1">中途之家</a>
+                    </li>
+                    <li>
+                        <a href="#">商城</a>
+                    </li>
+                    <li>
+                        <a href="#">討論區</a>
+                    </li>
+                    <li>
+                        <a href="#">會員專區</a>
+                    </li>
+                </ul>
+            </nav>
+            <div class="follow">
+                <div class="btns">
+                    <span>follow us on</span>
+                    <a href="#" class="btn facebook">
+                        <i class="fa fa-facebook"></i>
+                    </a>
+                    <a href="#" class="btn youtube">
+                        <i class="fa fa-youtube"></i>
+                    </a>
+                    <a href="#" class="btn twitter">
+                        <i class="fa fa-twitter"></i>
+                    </a>
+                    <a href="#" class="btn google">
+                        <i class="fa fa-google"></i>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
