--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <ul></ul>
     <script>
         window.addEventListener('load', function () {
-            var pages = ['index','member','header','footer','halfway_house_search','halfway_house_detail','catSearch']; //此處新增文件名字 var pages = ['file1','file2','file..n'];
+            var pages = ['index','member','halfway_house_search','halfway_house_detail','catSearch']; //此處新增文件名字 var pages = ['file1','file2','file..n'];
             var fragment = document.createDocumentFragment();
             for (const page of pages) {
                 let li = document.createElement('li');
