--- a/html/catContent.html
+++ b/html/catContent.html
@@ -61,9 +61,13 @@
 				<figure>
 					<h1>喵航航</h1>
 					<br>約2017/09月份出生
-					<br>男生
+					<br>性別:男孩
 					<i class="fa fa-mars" aria-hidden="true"></i>
-					<br>活潑親人
+					<br>個性:活潑親人
+					<br>毛色:黑白
+					<br>地區:臺北市
+					<br>疫苗:已施打
+					<br>結紮:已結紮
 					<div class="btn">
 						<button class="defaultBtn">我要領養</button>
 						<button class="defaultBtn" id="donate">我要助養</button>
