--- a/html/halfway_house_search.html
+++ b/html/halfway_house_search.html
@@ -25,7 +25,7 @@
         <nav>
             <ul>
                 <li>
-                    <a href="#">尋喵</a>
+                    <a href="./catSearch.html" title="前往尋喵">尋喵</a>
                 </li>
                 <li>
                     <a href="##1">中途之家</a>
