--- a/html/index.html
+++ b/html/index.html
@@ -193,7 +193,7 @@
         <!-- footer -->
         <footer>
             <div class="container">
-                <nav>
+                <!-- <nav>
                     <ul>
                         <li>
                             <a href="#">尋喵</a>
@@ -211,7 +211,7 @@
                             <a href="#">會員專區</a>
                         </li>
                     </ul>
-                </nav>
+                </nav> -->
                 <div class="follow">
                     <div class="btns">
                         <span>follow us on</span>
