--- a/html/catContent.html
+++ b/html/catContent.html
@@ -56,7 +56,7 @@
 			<picture class="catItem">
 				<i class="fa fa-heart-o favorite" aria-hidden="true"></i>
 				<div class="img">
-					<img src="../../images/catUpload/album_img_1_resized.jpg" alt="">
+					<img src="../images/catUpload/album_img_1_resized.jpg" alt="">
 				</div>
 				<figure>
 					<h1>喵航航</h1>
