--- a/html/catSearch.html
+++ b/html/catSearch.html
@@ -164,7 +164,7 @@
 					<div class="catContent">
 						<a href="catContent.html">
 							<div class="img">
-								<img src="../../images/catUpload/album_img_1_resized.jpg" alt="">
+								<img src="../images/catUpload/album_img_1_resized.jpg" alt="">
 							</div>
 						</a>
 						<button type="button" class="quickView">
@@ -184,7 +184,7 @@
 					<div class="catContent">
 						<a href="#" class="BBB">
 							<div class="img">
-								<img src="../../images/catUpload/album_img_2_resized.jpg" alt="">
+								<img src="../images/catUpload/album_img_2_resized.jpg" alt="">
 							</div>
 						</a>
 						<button type="button" class="quickView">
@@ -204,7 +204,7 @@
 					<div class="catContent">
 						<a href="#" class="BBB">
 							<div class="img">
-								<img src="../../images/catUpload/album_img_3_resized.jpg" alt="">
+								<img src="../images/catUpload/album_img_3_resized.jpg" alt="">
 							</div>
 						</a>
 						<button type="button" class="quickView">
@@ -224,7 +224,7 @@
 					<div class="catContent">
 						<a href="#" class="BBB">
 							<div class="img">
-								<img src="../../images/catUpload/album_img_4_resized.jpg" alt="">
+								<img src="../images/catUpload/album_img_4_resized.jpg" alt="">
 							</div>
 						</a>
 						<button type="button" class="quickView">
@@ -245,7 +245,7 @@
 
 						<a href="#" class="BBB">
 							<div class="img">
-								<img src="../../images/catUpload/album_img_5_resized.jpg" alt="">
+								<img src="../images/catUpload/album_img_5_resized.jpg" alt="">
 							</div>
 						</a>
 						<button type="button" class="quickView">
@@ -266,7 +266,7 @@
 
 						<a href="#" class="BBB">
 							<div class="img">
-								<img src="../../images/catUpload/album_img_6_resized.jpg" alt="">
+								<img src="../images/catUpload/album_img_6_resized.jpg" alt="">
 							</div>
 						</a>
 						<button type="button" class="quickView">
@@ -286,7 +286,7 @@
 					<div class="catContent">
 						<a href="#" class="BBB">
 							<div class="img">
-								<img src="../../images/catUpload/album_img_7_resized.jpg" alt="">
+								<img src="../images/catUpload/album_img_7_resized.jpg" alt="">
 							</div>
 						</a>
 						<button type="button" class="quickView">
@@ -307,7 +307,7 @@
 
 						<a href="#" class="BBB">
 							<div class="img">
-								<img src="../../images/catUpload/album_img_8_resized.jpg" alt="">
+								<img src="../images/catUpload/album_img_8_resized.jpg" alt="">
 							</div>
 						</a>
 						<button type="button" class="quickView">
@@ -327,7 +327,7 @@
 					<div class="catContent">
 						<a href="#" class="BBB">
 							<div class="img">
-								<img src="../../images/catUpload/album_img_9_resized.jpg" alt="">
+								<img src="../images/catUpload/album_img_9_resized.jpg" alt="">
 							</div>
 						</a>
 						<button type="button" class="quickView">
