--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 link.addEventListener('mouseleave', function (e) { e.target.style.color = '#fff'; });
                 Object.assign(link, {
                     textContent: page,
-                    href: '/html/' + page + '.html',
+                    href: 'html/' + page + '.html',
                     style: 'font-size: 26px;\
                     text-decoration: none;\
                     color: #fff;\
