--- a/html/halfway_house_detail.html
+++ b/html/halfway_house_detail.html
@@ -53,134 +53,174 @@
     </header>
     <div class="right">
         <div class="banner">
-            <div class="text">
-                希望館
+            <h2>
+                讀貓園
+            </h2>
+            <div class="intro">
+                這棟建築名為「希望館」。從一樓到三樓都是老闆，老嫗一手打造的貓咪天堂。搭乘捷運咖啡線到「麟光站」，步行2分鐘就可以看到了！一樓「多恩寵物商城」，是間寵物商品店，還有提供寵物自助澡堂。二樓「讀貓園—貓咪中途咖啡」，享受咖啡與貓咪的治癒，店貓都超級親人！這裡也是「希望館」的重點樓層，從收容所來的可愛流浪小貓們住在這裡，等待溫柔愛貓的新主人領養！三樓「貓咪遊樂園．貓咪旅館」是專門給喵星人住的旅館，當貓奴要長期外出時，就可帶貓咪們來此度假。
+            </div>
+            <div class="contact">
+                地址：台北市大安區和平東路三段370號2樓
+                <br> 電話：02 2736 9898
+                <br> 營業時間：14:00 – 22:30（周一公休）
             </div>
         </div>
-        <div class="intro">
-            這棟建築名為「希望館」。從一樓到三樓都是老闆，老嫗一手打造的貓咪天堂。搭乘捷運咖啡線到「麟光站」，步行2分鐘就可以看到了！一樓「多恩寵物商城」，是間寵物商品店，還有提供寵物自助澡堂。二樓「讀貓園—貓咪中途咖啡」，享受咖啡與貓咪的治癒，店貓都超級親人！這裡也是「希望館」的重點樓層，從收容所來的可愛流浪小貓們住在這裡，等待溫柔愛貓的新主人領養！三樓「貓咪遊樂園．貓咪旅館」是專門給喵星人住的旅館，當貓奴要長期外出時，就可帶貓咪們來此度假。
-        </div>
-        <div class="contact">
-            地址：台北市大安區和平東路三段370號2樓
-            <br> 電話：02 2736 9898
-            <br> 營業時間：14:00 – 22:30（周一公休）
-        </div>
+
         <div class="halfwaypic">
             <div class="container">
                 <div class="picture">
-                    <img src="../images/33184665385_f00176040f_o.jpg" alt="">
+                    <img src="../images/halfdetail2.jpg" alt="">
                 </div>
                 <div class="picture">
-                    <img src="../images/33184665385_f00176040f_o.jpg" alt="">
+                    <img src="../images/halfdetail3.jpg" alt="">
                 </div>
                 <div class="picture">
-                    <img src="../images/33184665385_f00176040f_o.jpg" alt="">
+                    <img src="../images/halfdetail2.jpg" alt="">
                 </div>
                 <div class="picture">
-                    <img src="../images/33184665385_f00176040f_o.jpg" alt="">
+                    <img src="../images/halfdetail3.jpg" alt="">
                 </div>
             </div>
         </div>
+
         <div class="cat">
             <h2>我們的喵小孩</h2>
             <img src="../images/flycat1.png" alt="" class="flycat">
-            <img src="../images/flycat2.png" alt="" class="flycat">
             <img src="../images/flycat3.png" alt="" class="flycat">
             <div class="container">
                 <div class="threecat">
+                    <i class="fa fa-heart-o favorite" aria-hidden="true"></i>
                     <img src="../images/catcat_171225_0003.jpg" alt="">
                     <div class="text">
-                        <h3>喵喵喵</h3>
-                        生日:1993/13/13
-                        <br> 性別:男生
-                        <br>
+                        <h3>喵芽芽</h3>
+                        約2017/09月份出生<br>
+                        女生
+                        <i class="fa fa-venus" aria-hidden="true" style="color:crimson"></i><br>
+                        活潑親人
                     </div>
                 </div>
                 <div class="threecat">
+                    <i class="fa fa-heart-o favorite" aria-hidden="true"></i>
                     <img src="../images/catcat_171225_0004.jpg" alt="">
                     <div class="text">
-                        <h3>喵喵喵</h3>
-                        生日:1993/13/13
-                        <br> 性別:男生
-                        <br>
+                        <h3>喵芽芽</h3>
+                        約2017/09月份出生<br>
+                        女生
+                        <i class="fa fa-venus" aria-hidden="true" style="color:crimson"></i><br>
+                        活潑親人
                     </div>
                 </div>
                 <div class="threecat">
+                    <i class="fa fa-heart-o favorite" aria-hidden="true"></i>
                     <img src="../images/catcat_171225_0007.jpg" alt="">
                     <div class="text">
-                        <h3>喵喵喵</h3>
-                        生日:1993/13/13
-                        <br> 性別:男生
-                        <br>
+                        <h3>喵芽芽</h3>
+                        約2017/09月份出生<br>
+                        女生
+                        <i class="fa fa-venus" aria-hidden="true" style="color:crimson"></i><br>
+                        活潑親人
                     </div>
                 </div>
             </div>
             <div class="container">
                 <div class="threecat">
+                    <i class="fa fa-heart-o favorite" aria-hidden="true"></i>
                     <img src="../images/catcat_171225_0003.jpg" alt="">
                     <div class="text">
-                        <h3>喵喵喵</h3>
-                        生日:1993/13/13
-                        <br> 性別:男生
-                        <br>
+                        <h3>喵芽芽</h3>
+                        約2017/09月份出生<br>
+                        女生
+                        <i class="fa fa-venus" aria-hidden="true" style="color:crimson"></i><br>
+                        活潑親人
                     </div>
                 </div>
                 <div class="threecat">
+                    <i class="fa fa-heart-o favorite" aria-hidden="true"></i>
                     <img src="../images/catcat_171225_0004.jpg" alt="">
                     <div class="text">
-                        <h3>喵喵喵</h3>
-                        生日:1993/13/13
-                        <br> 性別:男生
-                        <br>
+                        <h3>喵芽芽</h3>
+                        約2017/09月份出生<br>
+                        女生
+                        <i class="fa fa-venus" aria-hidden="true" style="color:crimson"></i><br>
+                        活潑親人
                     </div>
                 </div>
                 <div class="threecat">
+                    <i class="fa fa-heart-o favorite" aria-hidden="true"></i>
                     <img src="../images/catcat_171225_0007.jpg" alt="">
                     <div class="text">
-                        <h3>喵喵喵</h3>
-                        生日:1993/13/13
-                        <br> 性別:男生
-                        <br>
+                        <h3>喵芽芽</h3>
+                        約2017/09月份出生<br>
+                        女生
+                        <i class="fa fa-venus" aria-hidden="true" style="color:crimson"></i><br>
+                        活潑親人
                     </div>
                 </div>
             </div>
         </div>
+        <script src="../js/cat/like.js"></script>
 
         <div class="map">
             <h2>我們的位置</h2>
             <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d1808.4820782514587!2d121.19146549411086!3d24.967334110163314!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x1b5e6ee66e9fec49!2z6LOH562W5pyD5Lit5aOiIFRpYmFNZSDlnIvpmpvkurrmiY3nmbzlsZXkuK3lv4M!5e0!3m2!1szh-TW!2stw!4v1514365006333"
                 width="100%" height="500px" frameborder="0" style="border:0" allowfullscreen></iframe>
         </div>
+
         <div class="talk">
             <div class="container">
                 <h2>最新文章</h2>
                 <div class="article">
-                    <p>Here is some content. Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil accusantium dolor
+                    <h3>看懂貓咪心思就知貓咪多愛你</h3>
+                    <p>
+                        Here is some content. Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil accusantium dolor
                         aut delectus, incidunt ab culpa laboriosam doloribus impedit ullam ut facere repudiandae officia
                         illo unde maiores eius dolorem fuga.
+                        <br>
+                        <br>
+                        <br>
+                        <a href="#">see more</a>
                     </p>
                 </div>
                 <div class="article">
-                    <p>Here is some content. Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil accusantium dolor
+                    <h3>看懂貓咪心思就知貓咪多愛你</h3>
+                    <p>
+                        Here is some content. Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil accusantium dolor
                         aut delectus, incidunt ab culpa laboriosam doloribus impedit ullam ut facere repudiandae officia
                         illo unde maiores eius dolorem fuga.
+                        <br>
+                        <br>
+                        <br>
+                        <a href="#">see more</a>
                     </p>
                 </div>
                 <div class="article">
-                    <p>Here is some content. Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil accusantium dolor
+                    <h3>看懂貓咪心思就知貓咪多愛你</h3>
+                    <p>
+                        Here is some content. Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil accusantium dolor
                         aut delectus, incidunt ab culpa laboriosam doloribus impedit ullam ut facere repudiandae officia
                         illo unde maiores eius dolorem fuga.
+                        <br>
+                        <br>
+                        <br>
+                        <a href="#">see more</a>
                     </p>
                 </div>
                 <div class="article">
-                    <p>Here is some content. Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil accusantium dolor
+                    <h3>看懂貓咪心思就知貓咪多愛你</h3>
+                    <p>
+                        Here is some content. Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil accusantium dolor
                         aut delectus, incidunt ab culpa laboriosam doloribus impedit ullam ut facere repudiandae officia
                         illo unde maiores eius dolorem fuga.
+                        <br>
+                        <br>
+                        <br>
+                        <a href="#">see more</a>
                     </p>
                 </div>
             </div>
         </div>
     </div>
+    
     <footer>
         <div class="container">
             <div class="follow">
