--- a/html/catContent.html
+++ b/html/catContent.html
@@ -13,7 +13,7 @@
 <body>
 	<header>
 		<div class="logo">
-			<a href="../index.html">
+			<a href="index.html">
 				<h1>
 					<img src="../images/logo_white.png" alt="尋喵啟事">
 				</h1>
@@ -22,13 +22,13 @@
 		<nav>
 			<ul>
 				<li>
-					<a href="#">尋喵</a>
+					<a href="catSearch.html">尋喵</a>
 				</li>
 				<li>
-					<a href="##1">中途之家</a>
+					<a href="halfway_house_search.html">中途之家</a>
 				</li>
 				<li>
-					<a href="#">商城</a>
+					<a href="Cat_ShoppingStore.html">商城</a>
 				</li>
 				<li>
 					<a href="#">討論區</a>
