--- a/html/catSearch.html
+++ b/html/catSearch.html
@@ -7,14 +7,14 @@
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<script src='https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-	<link rel="stylesheet" href="../css/searchCat.css">
+	<link rel="stylesheet" href="../css/catSearch.css">
 	<title>尋喵</title>
 </head>
 
 <body>
 	<header>
 		<div class="logo">
-			<a href="../index.html">
+			<a href="index.html">
 				<h1>
 					<img src="../images/logo_white.png" alt="尋喵啟事">
 				</h1>
@@ -23,13 +23,13 @@
 		<nav>
 			<ul>
 				<li>
-					<a href="#">尋喵</a>
+					<a href="catSearch.html">尋喵</a>
 				</li>
 				<li>
-					<a href="##1">中途之家</a>
+					<a href="halfway_house_search.html">中途之家</a>
 				</li>
 				<li>
-					<a href="#">商城</a>
+					<a href="Cat_ShoppingStore.html">商城</a>
 				</li>
 				<li>
 					<a href="#">討論區</a>
@@ -164,7 +164,7 @@
 					<div class="catContent">
 						<a href="catContent.html">
 							<div class="img">
-								<img src="../../images/catUpload/album_img_1_resized.jpg" alt="">
+								<img src="../../images/catUpload/album_img_1_resized.jpg" alt="喵航航">
 							</div>
 						</a>
 						<button type="button" class="quickView">
@@ -182,9 +182,9 @@
 				<picture class="catItem catItem_2">
 					<i class="fa fa-heart-o favorite" aria-hidden="true"></i>
 					<div class="catContent">
-						<a href="#" class="BBB">
+						<a href="catContent.html">
 							<div class="img">
-								<img src="../../images/catUpload/album_img_2_resized.jpg" alt="">
+								<img src="../../images/catUpload/album_img_2_resized.jpg" alt="喵辛巴">
 							</div>
 						</a>
 						<button type="button" class="quickView">
@@ -202,9 +202,9 @@
 				<picture class="catItem catItem_3">
 					<i class="fa fa-heart-o favorite" aria-hidden="true"></i>
 					<div class="catContent">
-						<a href="#" class="BBB">
+						<a href="catContent.html">
 							<div class="img">
-								<img src="../../images/catUpload/album_img_3_resized.jpg" alt="">
+								<img src="../../images/catUpload/album_img_3_resized.jpg" alt="喵芽芽">
 							</div>
 						</a>
 						<button type="button" class="quickView">
@@ -222,9 +222,9 @@
 				<picture class="catItem catItem_4">
 					<i class="fa fa-heart-o favorite" aria-hidden="true"></i>
 					<div class="catContent">
-						<a href="#" class="BBB">
+						<a href="catContent.html">
 							<div class="img">
-								<img src="../../images/catUpload/album_img_4_resized.jpg" alt="">
+								<img src="../../images/catUpload/album_img_4_resized.jpg" alt="喵蝦米">
 							</div>
 						</a>
 						<button type="button" class="quickView">
@@ -243,9 +243,9 @@
 					<i class="fa fa-heart-o favorite" aria-hidden="true"></i>
 					<div class="catContent">
 
-						<a href="#" class="BBB">
+						<a href="catContent.html">
 							<div class="img">
-								<img src="../../images/catUpload/album_img_5_resized.jpg" alt="">
+								<img src="../../images/catUpload/album_img_5_resized.jpg" alt="喵絨絨">
 							</div>
 						</a>
 						<button type="button" class="quickView">
@@ -264,9 +264,9 @@
 					<i class="fa fa-heart-o favorite" aria-hidden="true"></i>
 					<div class="catContent">
 
-						<a href="#" class="BBB">
+						<a href="catContent.html">
 							<div class="img">
-								<img src="../../images/catUpload/album_img_6_resized.jpg" alt="">
+								<img src="../../images/catUpload/album_img_6_resized.jpg" alt="喵咪醬">
 							</div>
 						</a>
 						<button type="button" class="quickView">
@@ -284,9 +284,9 @@
 				<picture class="catItem catItem_7">
 					<i class="fa fa-heart-o favorite" aria-hidden="true"></i>
 					<div class="catContent">
-						<a href="#" class="BBB">
+						<a href="catContent.html">
 							<div class="img">
-								<img src="../../images/catUpload/album_img_7_resized.jpg" alt="">
+								<img src="../../images/catUpload/album_img_7_resized.jpg" alt="喵皮皮">
 							</div>
 						</a>
 						<button type="button" class="quickView">
@@ -305,9 +305,9 @@
 					<i class="fa fa-heart-o favorite" aria-hidden="true"></i>
 					<div class="catContent">
 
-						<a href="#" class="BBB">
+						<a href="catContent.html">
 							<div class="img">
-								<img src="../../images/catUpload/album_img_8_resized.jpg" alt="">
+								<img src="../../images/catUpload/album_img_8_resized.jpg" alt="喵默默">
 							</div>
 						</a>
 						<button type="button" class="quickView">
@@ -325,9 +325,9 @@
 				<picture class="catItem catItem_9">
 					<i class="fa fa-heart-o favorite" aria-hidden="true"></i>
 					<div class="catContent">
-						<a href="#" class="BBB">
+						<a href="catContent.html">
 							<div class="img">
-								<img src="../../images/catUpload/album_img_9_resized.jpg" alt="">
+								<img src="../../images/catUpload/album_img_9_resized.jpg" alt="喵追風">
 							</div>
 						</a>
 						<button type="button" class="quickView">
