--- a/html/halfway_house_detail.html
+++ b/html/halfway_house_detail.html
@@ -95,7 +95,7 @@
                         <h3>喵芽芽</h3>
                         約2017/09月份出生<br>
                         女生
-                        <i class="fa fa-venus" aria-hidden="true" style="color:crimson"></i><br>
+                        <i class="fa fa-venus" aria-hidden="true"></i><br>
                         活潑親人
                     </div>
                 </div>
@@ -106,7 +106,7 @@
                         <h3>喵芽芽</h3>
                         約2017/09月份出生<br>
                         女生
-                        <i class="fa fa-venus" aria-hidden="true" style="color:crimson"></i><br>
+                        <i class="fa fa-venus" aria-hidden="true"></i><br>
                         活潑親人
                     </div>
                 </div>
@@ -117,7 +117,7 @@
                         <h3>喵芽芽</h3>
                         約2017/09月份出生<br>
                         女生
-                        <i class="fa fa-venus" aria-hidden="true" style="color:crimson"></i><br>
+                        <i class="fa fa-venus" aria-hidden="true"></i><br>
                         活潑親人
                     </div>
                 </div>
@@ -130,7 +130,7 @@
                         <h3>喵芽芽</h3>
                         約2017/09月份出生<br>
                         女生
-                        <i class="fa fa-venus" aria-hidden="true" style="color:crimson"></i><br>
+                        <i class="fa fa-venus" aria-hidden="true"></i><br>
                         活潑親人
                     </div>
                 </div>
@@ -141,7 +141,7 @@
                         <h3>喵芽芽</h3>
                         約2017/09月份出生<br>
                         女生
-                        <i class="fa fa-venus" aria-hidden="true" style="color:crimson"></i><br>
+                        <i class="fa fa-venus" aria-hidden="true"></i><br>
                         活潑親人
                     </div>
                 </div>
@@ -152,7 +152,7 @@
                         <h3>喵芽芽</h3>
                         約2017/09月份出生<br>
                         女生
-                        <i class="fa fa-venus" aria-hidden="true" style="color:crimson"></i><br>
+                        <i class="fa fa-venus" aria-hidden="true"></i><br>
                         活潑親人
                     </div>
                 </div>
