--- a/html/halfway_house_search.html
+++ b/html/halfway_house_search.html
@@ -55,7 +55,7 @@
         </div>
     </header>
     <div class="right">
-        <h2>中途之家</h2>
+        <h2>搜尋中途之家</h2>
 
         <div class="searchsection">
             <div class="container">
@@ -108,37 +108,37 @@
 
         <div class="item">
             <div class="text">
-                <h4>野喵中途咖啡</h4>
+                <h3>野喵中途咖啡</h3>
                 <br> ADD：新北市三重區集英路65號
                 <br> TEL：02-2857-8282
                 <br> TIME：12:00～21:00（周一公休）
             </div>
             <div class="pic">
-                <img src="../images/33184672765_a14d959f8b_o.jpg" alt="">
+                <img src="../images/halfdetail3.jpg" alt="">
             </div>
             <div class="bg bg1"></div>
         </div>
         <div class="item">
             <div class="text">
-                <h4>野喵中途咖啡</h4>
+                <h3>野喵中途咖啡</h3>
                 <br> ADD：新北市三重區集英路65號
                 <br> TEL：02-2857-8282
                 <br> TIME：12:00～21:00（周一公休）
             </div>
             <div class="pic">
-                <img src="../images/33184672765_a14d959f8b_o.jpg" alt="">
+                <img src="../images/halfdetail2.jpg" alt="">
             </div>
             <div class="bg bg2"></div>
         </div>
         <div class="item">
             <div class="text">
-                <h4>野喵中途咖啡</h4>
+                <h3>野喵中途咖啡</h3>
                 <br> ADD：新北市三重區集英路65號
                 <br> TEL：02-2857-8282
                 <br> TIME：12:00～21:00（周一公休）
             </div>
             <div class="pic">
-                <img src="../images/33184672765_a14d959f8b_o.jpg" alt="">
+                <img src="../images/halfdetail3.jpg" alt="">
             </div>
             <div class="bg bg3"></div>
         </div>
