--- a/html/halfway_house_detail.html
+++ b/html/halfway_house_detail.html
@@ -82,6 +82,7 @@
                 </div>
             </div>
         </div>
+        <script src="../js/halfway/showlarge.js"></script>
 
         <div class="cat">
             <h2>我們的喵小孩</h2>
